# tokenmaster

./: .env.example  .gitignore  README.md  pytest.ini
docs/: core-api.md
js/ctxmaster/: CHANGELOG.md  README.md  index.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.cjs.json
js/ctxmaster/examples/: demo.mjs
js/ctxmaster/scripts/: clean.mjs
js/ctxmaster/src/: gauge.ts  index.ts
js/ctxmaster/test/: gauge.test.mjs  placeholder.test.js  require.test.cjs  smoke.test.mjs
js/tokenmaster/: CHANGELOG.md  README.md  index.js  package-lock.json  package.json  tsconfig.esm.json
js/tokenmaster/scripts/: embed-models.mjs  write-esm-stub.mjs
js/tokenmaster/src/: advisor.ts  events.ts  fidelity.ts  index.ts  meter.ts  models-data.ts  registry.ts  types.ts
js/tokenmaster/test/: advisor.test.mjs  events.test.mjs  fidelity.test.mjs  meter.test.mjs  placeholder.test.js  registry.test.mjs  require.test.cjs  smoke.test.mjs  types.test.mjs  vectors.test.mjs
python/ctxmaster/: CHANGELOG.md  README.md  pyproject.toml
python/ctxmaster/examples/: demo_gauge.py  print_about.py
python/ctxmaster/src/ctxmaster/: __init__.py  gauge.py
python/ctxmaster/tests/: test_gauge.py  test_placeholder.py
python/tokenmaster/: CHANGELOG.md  README.md  pyproject.toml
python/tokenmaster/examples/: print_about.py
python/tokenmaster/src/tokenmaster/: __init__.py  advisor.py  events.py  fidelity.py  meter.py  registry.py  types.py
python/tokenmaster/src/tokenmaster/data/: models.json
python/tokenmaster/tests/: test_advisor.py  test_events.py  test_fidelity.py  test_meter.py  test_placeholder.py  test_registry.py  test_types.py  test_vectors.py
rust/: Cargo.toml
rust/ctxmaster/: Cargo.toml  README.md
rust/ctxmaster/examples/: demo.rs
rust/ctxmaster/src/: lib.rs
rust/ctxmaster/tests/: gauge.rs
rust/tokenmaster/: Cargo.toml  README.md
rust/tokenmaster/src/: advisor.rs  events.rs  fidelity.rs  lib.rs  meter.rs  registry.rs  types.rs
rust/tokenmaster/tests/: advisor.rs  conformance.rs  events.rs  fidelity.rs  meter.rs  registry.rs  types.rs
spec/: README.md  generate_vectors.py
spec/vectors/: cache-breakdown-reserved.json  calibrated-effective.json  cold-start.json  exhausted.json  model-switch.json  steady-growth-basic.json  velocity-shift.json  zero-growth.json  zone-crossings.json
