[package]
name = "ctxmaster"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Visualization layer for tokenmaster: terminal context gauge for LLM context-budget metering, rendered in raw ANSI with zero dependencies beyond the core."
license = "MIT"
repository = "https://github.com/jemsbhai/tokenmaster"
readme = "README.md"
keywords = ["llm", "visualization", "terminal", "gauge", "context-window"]
categories = ["visualization", "development-tools"]

[dependencies]
tokenmaster = { version = "0.1.0", path = "../tokenmaster" }

[dev-dependencies]
serde_json = "1"
